# emoji_haikus

./: .gitignore  README.md  main.py  pyproject.toml  sample.env
base/: AcidOSs.md  TheScriptWriter.md  ZenAIMaster.md
episodes/season_1/01_The_Awakening/: script.txt
samples/: script.txt
script_writing/: main.py  prompt_loader.py
text_to_speech/: config.json  main.py
